<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/WelcomeText"
        android:layout_width="209dp"
        android:layout_height="0dp"
        android:layout_marginTop="112dp"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:text="@string/Welcome"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Nick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/LogString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/Login"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/PassString"
        app:layout_constraintStart_toStartOf="@+id/Nick"
        app:layout_constraintTop_toBottomOf="@+id/Nick" />

    <EditText
        android:id="@+id/PassString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="39dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/LogButton"
        app:layout_constraintStart_toStartOf="@+id/LogString"
        app:layout_constraintTop_toBottomOf="@+id/LogString" />

    <Button
        android:id="@+id/LogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="274dp"
        android:text="@string/Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PassString" />

    <EditText
        android:id="@+id/Nick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/LogString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WelcomeText" />

    <Button
        android:id="@+id/HelpButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>